deploy/05-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: webapp
spec:
  selector:
    app: webapp
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
  type: ClusterIP
