deploy/08-traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
  - name: web
    port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
  - name: admin
    port: 8080
    targetPort: 8080
    nodePort: 30081
    protocol: TCP
